<resources>
    <string name="app_name">湘大二手街</string>
    <string name="app_name_en">second_hand</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="app_title">湘大二手街</string>

    <string name="searchBtn">biu~</string>

    <string name="bargain_true">可小刀</string>
    <string name="bargain_false">一口价</string>


    <string name="username">邮箱</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>

    <string name="isNotLogin">未登录</string>
    <string name="logOut">退出账号</string>
    <string name="clickLogin">点击登录</string>

    <string name="album">相册</string>
    <string name="camera">拍照</string>

    <string name="publish">发布商品</string>
    <string name="editInfo">修改信息</string>
    <string name="selling">正上架商品</string>
    <string name="about">关于</string>

    <string name="checkUpdate">检查更新</string>
    <string name="checkingUpdate">正在检查更新</string>
    <string name="callMe">联系我们</string>


    <string name="defaultTips">主公,小二等候多时了哦</string>
    <string name="loadingTips">正在加载...</string>
    <string name="endTips">加载完毕,上拉加载更多</string>
    <string name="isAllTips">已加载全部</string>
    <string name="isNullTips">暂无商品哦</string>
    <string name="title_activity_edit_info">EditInfoActivity</string>
    <string name="title_activity_selling">SellingActivity</string>
    <string name="title_activity_about">AboutActivity</string>
</resources>
