<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sky31.buy.second_hand.ui.fragment.MeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/usericon_layout_margin"
                android:background="@color/white"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="20dp">

                <ImageView
                    android:id="@+id/iv_usericon"
                    android:layout_width="175dp"
                    android:layout_height="140dp"
                    android:layout_marginLeft="35dp"
                    android:src="@drawable/waiter_default" />

                <TextView
                    android:id="@+id/tv_nickname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="未登录"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/tv_login_link"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/login"
                        android:textColor="@color/material_deep_teal_200"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/tv_register_link"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="注册"
                        android:textColor="@color/material_deep_teal_200"
                        android:textSize="12sp" />
                </LinearLayout>

            </LinearLayout>

            <TableRow
                android:id="@+id/tr_edit_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/table_row_marginBottom"
                android:background="@drawable/item_bg_color"
                android:paddingBottom="@dimen/table_row_paddingTop"
                android:paddingLeft="@dimen/table_row_paddingLeft"
                android:paddingRight="@dimen/table_row_paddingLeft"
                android:paddingTop="@dimen/table_row_paddingTop">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/editInfo" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text=">" />
            </TableRow>

            <TableRow
                android:id="@+id/tr_publish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/table_row_marginBottom"
                android:background="@drawable/item_bg_color"
                android:paddingBottom="@dimen/table_row_paddingTop"
                android:paddingLeft="@dimen/table_row_paddingLeft"
                android:paddingRight="@dimen/table_row_paddingLeft"
                android:paddingTop="@dimen/table_row_paddingTop">

                <TextView
                    android:id="@+id/tv_publish"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/publish" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text=">" />

            </TableRow>

            <TableRow
                android:id="@+id/tr_selling"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/table_row_marginBottom"
                android:background="@drawable/item_bg_color"
                android:paddingBottom="@dimen/table_row_paddingTop"
                android:paddingLeft="@dimen/table_row_paddingLeft"
                android:paddingRight="@dimen/table_row_paddingLeft"
                android:paddingTop="@dimen/table_row_paddingTop">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/selling" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text=">" />
            </TableRow>

            <TableRow
                android:id="@+id/tr_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="@dimen/table_row_marginTop"
                android:background="@drawable/item_bg_color"
                android:paddingBottom="@dimen/table_row_paddingTop"
                android:paddingLeft="@dimen/table_row_paddingLeft"
                android:paddingRight="@dimen/table_row_paddingLeft"
                android:paddingTop="@dimen/table_row_paddingTop">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text=">" />
            </TableRow>

        </LinearLayout>
    </ScrollView>

</FrameLayout>
